# jmap-server

./: .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  README.md  TODO.md  clippy.toml  install.sh  start_server.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  docker.yml  test.yml
components/backend_rocksdb/: Cargo.toml
components/core/: Cargo.toml
components/core/src/: lib.rs
components/core/src/api/: invocation.rs  mod.rs
components/core/src/blob/: mod.rs  store.rs  upload.rs
components/core/src/cluster/: follower.rs  main.rs  mod.rs  raft.rs  rpc.rs
components/core/src/server/: http.rs  mod.rs
components/core/src/state/: event_source.rs  manager.rs  mod.rs  push.rs
components/imap/: Cargo.toml
components/imap/src/: lib.rs
components/imap/src/parser/: append.rs  authenticate.rs  copy.rs  create.rs  delete.rs  enable.rs  examine.rs  fetch.rs  list.rs  login.rs  lsub.rs  mod.rs  move_.rs  receiver.rs  rename.rs  search.rs  select.rs  sort.rs  status.rs  store_.rs  subscribe.rs  thread.rs  unsubscribe.rs
components/imap/src/protocol/: append.rs  authenticate.rs  capability.rs  copy.rs  enable.rs  expunge.rs  fetch.rs  list.rs  login.rs  lsub.rs  mod.rs  namespace.rs  rename.rs  search.rs  select.rs  sort.rs  status.rs  store_.rs  thread.rs  utf7.rs
components/jmap/: Cargo.toml
components/jmap_mail/: Cargo.toml
components/jmap_mail/src/: changes.rs  get.rs  import.rs  ingest.rs  lib.rs  mailbox.rs  parse.rs  query.rs  set.rs  thread.rs
components/jmap_mail/src/email_submission/: changes.rs  get.rs  mod.rs  query.rs  raft.rs  schema.rs  serialize.rs  set.rs
components/jmap_mail/src/identity/: changes.rs  get.rs  mod.rs  raft.rs  schema.rs  serialize.rs  set.rs
components/jmap_mail/src/mail/: changes.rs  conv.rs  copy.rs  get.rs  import.rs  ingest.rs  mod.rs  parse.rs  query.rs  query_changes.rs  raft.rs  schema.rs  search_snippet.rs  serialize.rs  set.rs  sharing.rs
components/jmap_mail/src/mailbox/: changes.rs  get.rs  mod.rs  query.rs  query_changes.rs  raft.rs  schema.rs  serialize.rs  set.rs
components/jmap_mail/src/thread/: changes.rs  get.rs  mod.rs  schema.rs
components/jmap_mail/src/vacation_response/: get.rs  mod.rs  raft.rs  schema.rs  serialize.rs  set.rs
components/jmap_sharing/: Cargo.toml
components/jmap_sieve/: Cargo.toml
components/jmap_store/: Cargo.toml
components/nlp/: Cargo.toml
components/nlp/src/: lang.rs  lib.rs  stemmer.rs  token_map.rs
components/nlp/src/tokenizers/: indo_european.rs  japanese.rs  mod.rs
components/store/: Cargo.toml
components/store/src/: batch.rs  bitmap.rs  blob.rs  changelog.rs  changes.rs  config.rs  delete.rs  document.rs  field.rs  get.rs  id.rs  leb128.rs  lib.rs  log.rs  mutex_map.rs  object_builder.rs  query.rs  raft.rs  search_snippet.rs  serialize.rs  term.rs  term_index.rs  token_map.rs  update.rs
components/store/src/acl/: manage.rs  mod.rs  permission.rs  util.rs
components/store/src/blob/: local.rs  mod.rs  purge.rs  s3.rs  store.rs
components/store/src/config/: env_settings.rs  jmap.rs  mod.rs
components/store/src/core/: acl.rs  bitmap.rs  collection.rs  document.rs  error.rs  mod.rs  number.rs  tag.rs  vec_map.rs
components/store/src/log/: changes.rs  compact.rs  entry.rs  mod.rs  raft.rs
components/store/src/nlp/: lang.rs  mod.rs  pdf.rs  search_snippet.rs  stemmer.rs  term_index.rs
components/store/src/nlp/tokenizers/: chinese.rs  indo_european.rs  japanese.rs  mod.rs  word.rs
components/store/src/read/: acl.rs  bitmap.rs  comparator.rs  filter.rs  get.rs  iterator.rs  mod.rs  query.rs
components/store/src/serialize/: base32.rs  bitmap.rs  key.rs  leb128.rs  mod.rs
components/store/src/write/: batch.rs  delete.rs  field.rs  id_assign.rs  mod.rs  mutex_map.rs  operation.rs  options.rs  update.rs
components/store_rocksdb/: Cargo.toml
components/store_rocksdb/src/: bitmaps.rs  blob.rs  changelog.rs  delete.rs  document_id.rs  get.rs  insert.rs  iterator.rs  lib.rs  query.rs  tag.rs  term.rs  tests.rs
components/store_test/: Cargo.toml
components/store_test/resources/jmap_mail_get/: headers.json  message_attachment.json  multipart_alternative.json  multipart_cid.json  multipart_mixed.json  multipart_related.json  rfc8621.json  single_part.json  text_body_missing.json  text_body_missing_multipart.json
components/store_test/resources/jmap_mail_parse/: attachment.json  attachment_b64.json  headers.json
components/store_test/resources/jmap_mail_set/: headers.eml  headers.jmap  headers.json  minimal.jmap  mixed.jmap  nested_body.jmap  nested_body.json  rfc8621_1.jmap  rfc8621_1.json  rfc8621_2.jmap  rfc8621_2.json
components/store_test/resources/messages/: 001.json  001.yaml  headers.eml  headers.json  message_attachment.json  multipart_alternative.eml  multipart_alternative.json  multipart_cid.json  multipart_mixed.json  multipart_related.json  rfc8621.json  single_part.json  text_body_missing.json  text_body_missing_multipart.json
components/store_test/src/: blobs.rs  db_blobs.rs  db_insert_filter_sort.rs  db_log.rs  db_term_id.rs  db_tombstones.rs  insert_filter_sort.rs  jmap_changes.rs  jmap_mail_get.rs  jmap_mail_merge_threads.rs  jmap_mail_parse.rs  jmap_mail_query.rs  jmap_mail_query_changes.rs  jmap_mail_set.rs  jmap_mail_thread.rs  jmap_mailbox.rs  jmap_merge_threads.rs  lib.rs  test_artworks.rs  test_mail_threads.rs  tombstones.rs  tree.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: jmap_server.rs
resources/: oauth.html  oauth_footer.html  oauth_header.html  oauth_login.html  oauth_login.htx  oauth_login_failed.html
resources/config/: config.yml  config_win.yml
resources/scripts-deb/: postinst  preinst  prerm
resources/systemd/: stalwart-jmap.service  stalwart.jmap.plist
src/: config.rs  error.rs  jmap.rs  lib.rs  main.rs
src/api/: blob.rs  ingest.rs  invocation.rs  method.rs  mod.rs  request.rs  response.rs  session.rs
src/authorization/: auth.rs  base.rs  mod.rs  oauth.rs  rate_limit.rs
src/blob/: download.rs  upload.rs
(+302 files in other folders)
