[package]
name = "stalwart-jmap"
description = "Stalwart JMAP Server"
authors = [ "Stalwart Labs Ltd. <hello@stalw.art>"]
repository = "https://github.com/stalwartlabs/jmap-server"
homepage = "https://stalw.art/jmap"
keywords = ["jmap", "email", "mail", "server"]
categories = ["email"]
license = "AGPL-3.0-only"
version = "0.5.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "stalwart-jmap"
path = "src/main.rs"

[dependencies]
store = { path = "main/crates/store" }
jmap = { path = "main/crates/jmap" }
jmap_proto = { path = "main/crates/jmap-proto" }
smtp = { path = "main/crates/smtp", features = ["local_delivery"] }
directory = { path = "main/crates/directory" }
utils = { path = "main/crates/utils" }
tokio = { version = "1.23", features = ["full"] }
tracing = "0.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[features]
#default = ["sqlite", "foundationdb", "postgres", "mysql", "rocks", "elastic", "s3", "redis"]
default = ["sqlite", "postgres", "mysql", "rocks", "elastic", "s3", "redis"]
sqlite = ["store/sqlite"]
foundationdb = ["store/foundation"]
postgres = ["store/postgres"]
mysql = ["store/mysql"]
rocks = ["store/rocks"]
elastic = ["store/elastic"]
s3 = ["store/s3"]
redis = ["store/redis"]
test_mode = []

[workspace]
members = [
    "main/crates/jmap",
    "main/crates/jmap-proto",
    "main/crates/smtp",
    "main/crates/store",
    "main/crates/directory",
    "main/crates/utils",
    "main/crates/install",
    "main/tests",
]

[profile.dev]
opt-level = 0
debug = 1
codegen-units = 4
lto = false
incremental = true
panic = 'unwind'
debug-assertions = true
overflow-checks = false
rpath = false

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = true
incremental = false
panic = 'unwind'
debug-assertions = false
overflow-checks = false
rpath = false
#strip = true

[profile.test]
opt-level = 0
debug = 1
#codegen-units = 16
lto = false
incremental = true
debug-assertions = true
overflow-checks = true
rpath = false

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = true
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

