[package]
name = "core"
version = "0.1.0"
edition = "2021"
publish = false
resolver = "2"

[features]
debug = []

[dependencies]
jmap = { path = "../jmap" }
jmap_mail = { path = "../jmap_mail" }
store = { path = "../store" }
actix-web = "4"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
gethostname = "0.2.2"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = "0.7.0"
async-stream = "0.3.3"
num_cpus = "1.13.1"
futures = "0.3"
rayon = "1.5.1"
reqwest = "0.11"
