[package]
name = "imap"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
jmap = { path = "../jmap" }
jmap_mail = { path = "../jmap_mail" }
store = { path = "../store" }
#mail-parser = { git = "https://github.com/stalwartlabs/mail-parser" } TODO remove
#mail-builder = { git = "https://github.com/stalwartlabs/mail-builder" }
mail-parser = { path = "/home/vagrant/code/mail-parser" }
mail-builder = { path = "/home/vagrant/code/mail-builder" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

[features]
debug = []
