[package]
name = "jmap_mail"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
jmap = { path = "../jmap" }
store = { path = "../store" }
mail-parser = { git = "https://github.com/stalwartlabs/mail-parser" } 
mail-builder = { git = "https://github.com/stalwartlabs/mail-builder" }
mail-send = { git = "https://github.com/stalwartlabs/mail-send" } 
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

[features]
debug = []
