[package]
name = "store"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
nlp = { path = "../nlp" }
bitpacking = "0.8.4"
serde = { version = "1.0", features = ["derive"]}
parking_lot = "0.12.0"
bincode = "1.3.3"
moka = { version = "0.7" }
roaring = "0.9"
base32 = "0.4.0"
sha2 = "0.10.1"
tracing = "0.1"
lz4_flex = "0.9.2"
chrono = "0.4"
