[package]
name = "store"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bitpacking = "0.8.4"
serde = { version = "1.0", features = ["derive"]}
rand = "0.8.5"
parking_lot = "0.12.0"
bincode = "1.3.3"
moka = { version = "0.7" }
roaring = "0.9"
base32 = "0.4.0"
sha2 = "0.10.1"
tracing = "0.1"
lz4_flex = "0.9.2"
chrono = { version = "0.4", features = ["serde"]}
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
naive-cityhash = "0.2.0"
whatlang = "0.12" # Language detection
rust-stemmers = "1.2" # Stemmers
tinysegmenter = "0.1" # Japanese stemmer
jieba-rs = "0.6" # Chinese stemmer
