[package]
name = "store"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ahash = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"]}
moka = { version = "0.9.3", features = ["future"] }
chrono = { version = "0.4", features = ["serde"]}
bitpacking = "0.8.4"
rand = "0.8.5"
parking_lot = "0.12.0"
bincode = "1.3.3"
roaring = "0.10"
sha2 = "0.10.1"
blake3 = "1.3.1"
tracing = "0.1"
lz4_flex = "0.9.2"
lazy_static = "1.4"

# NLP
whatlang = "0.16" # Language detection
rust-stemmers = "1.2" # Stemmers
tinysegmenter = "0.1" # Japanese tokenizer
jieba-rs = "0.6" # Chinese stemmer

# Term hashing
xxhash-rust = { version = "0.8.5", features = ["xxh3"], optional = true }
naive-cityhash = { version = "0.2.0", optional = true }

# PDF extraction
pdf-extract = { version = "0.6.4", optional = true }
lopdf = { version = "0.26", default-features = false, features = [ "pom_parser" ], optional = true }

[features]
hash_terms = ["xxhash-rust", "naive-cityhash"]
pdf = ["pdf-extract", "lopdf"]
