[package]
name = "store_test"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
store = { path = "../store" }
#mail-parser = { git = "https://github.com/stalwartlabs/mail-parser" }
mail-parser = { path = "/home/vagrant/code/mail-parser" }
jmap_store = { path = "../jmap_store" }
jmap_mail = { path = "../jmap_mail" }
nlp = { path = "../nlp" }
rayon = "1.5.1"
csv = "1.1"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
