[package]
name = "store_test"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
store = { path = "../store" }
mail-parser = { git = "https://github.com/stalwartlabs/mail-parser" }
jmap_store = { path = "../jmap_store" }
jmap_mail = { path = "../jmap_mail" }
nlp = { path = "../nlp" }
csv = "1.1"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
rayon = "1.5.1"
